Address error-prone warnings